--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
@@ -21,5 +22,5 @@
   "scripts": {
     "start": "nodemon -q --watch src --ext ts --exec ts-node src/index.ts"
   },
-  "type": "module"
+  "type": "commonjs"
 }
